# voice-ai-scheduling-platform

./: .dockerignore  .env.example  .gitignore  Makefile  PROJECT_STATUS.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  errors.py  extensions.py  logging_config.py
backend/app/domain/: __init__.py  normalization.py  routing.py
backend/app/integrations/openai/: __init__.py  client.py  errors.py  prompts.py  schema.py
backend/app/integrations/vogent/: __init__.py  security.py
backend/app/models/: __init__.py  base.py  entities.py
backend/app/routes/: __init__.py  appointments.py  calls.py  common.py  confirmations.py  conversation.py  dashboard.py  health.py  patients.py  protocol.py  routing.py  simulator.py  slots.py  vogent.py
backend/app/seed/: __init__.py  command.py  data.py
backend/app/services/: booking.py  confirmation.py  conversation.py  idempotency.py  integration_status.py  rate_limit.py  serializers.py
backend/migrations/: env.py
backend/migrations/versions/: 20260720_0001_initial.py  20260720_0002_pre_live_integrations.py  20260720_0003_rate_limit_buckets.py
backend/tests/: conftest.py  test_api_workflows.py  test_concurrency.py  test_config.py  test_confirmation.py  test_conversation_orchestration.py  test_normalization.py  test_openai_adapter.py  test_routing_scenarios.py  test_security_boundaries.py  test_vogent_adapter.py
docs/: API.md  ARCHITECTURE.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  ERD.md  FINAL_QA_REPORT.md  (+3 more)
(+47 files in other folders)
