[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-medical-scheduling-agent-backend"
version = "1.0.0"
description = "Deterministic medical scheduling API"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.1,<4",
  "Flask-Cors>=5,<6",
  "SQLAlchemy>=2.0,<3",
  "alembic>=1.14,<2",
  "openai>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "gunicorn>=23,<24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "types-python-dateutil>=2.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["postgres: requires a PostgreSQL test database"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
